tests/snapshots/uuf50-218_first_10/tests__uuf50-01.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
unsatisfiable

----- stderr -----

Interactions
  Total          151_049_461
    Depth         77_876_289
    Breadth                1
  Annihilate      85_374_414
  Commute            199_574
  Copy            14_318_528
  Erase           17_231_011
  Expand          12_048_031
  Call            13_842_171
  Branch           8_035_732

Memory
  Heap               602_784 B
  Allocated    3_347_587_600 B
  Freed        3_347_587_600 B

[Performance...]
