tests/snapshots/uuf50-218_first_10/tests__uuf50-010.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
unsatisfiable

----- stderr -----

Interactions
  Total          124_141_193
    Depth         63_769_995
    Breadth                1
  Annihilate      70_137_720
  Commute            172_780
  Copy            11_783_710
  Erase           14_154_556
  Expand           9_898_597
  Call            11_387_059
  Branch           6_606_771

Memory
  Heap               589_904 B
  Allocated    2_751_236_656 B
  Freed        2_751_236_656 B

[Performance...]
