tests/snapshots/uuf50-218_first_10/tests__uuf50-010_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total          121_746_753
    Depth         53_243_916
    Breadth                2
  Annihilate      68_708_657
  Commute            188_032
  Copy            11_395_231
  Erase           13_944_824
  Expand           9_830_324
  Call            11_260_393
  Branch           6_419_292

Memory
  Heap               603_424 B
  Allocated    2_699_312_672 B
  Freed        2_699_312_672 B

[Performance...]
