tests/snapshots/uuf50-218_first_10/tests__uuf50-01_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total          146_323_426
    Depth         63_966_919
    Breadth                2
  Annihilate      82_607_782
  Commute            222_467
  Copy            13_671_050
  Erase           16_774_048
  Expand          11_816_656
  Call            13_518_663
  Branch           7_712_760

Memory
  Heap               623_552 B
  Allocated    3_243_996_480 B
  Freed        3_243_996_480 B

[Performance...]
