tests/snapshots/uuf50-218_first_10/tests__uuf50-02_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total           67_766_036
    Depth         29_722_964
    Breadth                2
  Annihilate      38_450_040
  Commute            111_181
  Copy             6_330_801
  Erase            7_674_266
  Expand           5_410_044
  Call             6_231_604
  Branch           3_558_100

Memory
  Heap               671_088 B
  Allocated    1_508_218_080 B
  Freed        1_508_218_080 B

[Performance...]
