tests/snapshots/uuf50-218_first_10/tests__uuf50-03.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
unsatisfiable

----- stderr -----

Interactions
  Total          153_361_285
    Depth         78_894_903
    Breadth                1
  Annihilate      86_633_154
  Commute            195_582
  Copy            14_613_874
  Erase           17_490_282
  Expand          12_208_289
  Call            14_058_430
  Branch           8_161_674

Memory
  Heap               635_408 B
  Allocated    3_400_166_864 B
  Freed        3_400_166_864 B

[Performance...]
