tests/snapshots/uuf50-218_first_10/tests__uuf50-03_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total          144_391_509
    Depth         63_240_728
    Breadth                2
  Annihilate      81_480_991
  Commute            214_109
  Copy            13_502_340
  Erase           16_555_297
  Expand          11_670_356
  Call            13_345_563
  Branch           7_622_853

Memory
  Heap               654_544 B
  Allocated    3_201_138_448 B
  Freed        3_201_138_448 B

[Performance...]
