tests/snapshots/uuf50-218_first_10/tests__uuf50-04.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - sat/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
unsatisfiable

----- stderr -----

Interactions
  Total           59_584_116
    Depth         26_259_942
    Breadth                2
  Annihilate      33_826_797
  Commute             87_464
  Copy             5_554_446
  Erase            6_724_371
  Expand           4_758_642
  Call             5_501_870
  Branch           3_130_526

Memory
  Heap               573_536 B
  Allocated    1_326_589_824 B
  Freed        1_326_589_824 B

[Performance...]
