tests/snapshots/uuf50-218_first_10/tests__uuf50-04_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total           59_351_164
  Annihilate      33_495_766
  Commute             87_464
  Copy             5_552_917
  Erase            6_790_776
  Expand           4_791_845
  Call             5_501_870
  Branch           3_130_526

Parallelism
  Depth           26_067_963
  Breadth                  2
  Speedup                 36 cB

Memory
  Heap               588_192 B
  Allocated    1_315_972_368 B
  Freed        1_315_972_368 B

[Performance...]
