tests/snapshots/uuf50-218_first_10/tests__uuf50-05.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
unsatisfiable

----- stderr -----

Interactions
  Total           81_897_117
    Depth         35_995_696
    Breadth                2
  Annihilate      46_479_302
  Commute            127_984
  Copy             7_663_462
  Erase            9_253_546
  Expand           6_528_594
  Call             7_544_274
  Branch           4_299_955

Memory
  Heap               569_632 B
  Allocated    1_823_541_440 B
  Freed        1_823_541_440 B

[Performance...]
