tests/snapshots/uuf50-218_first_10/tests__uuf50-05_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total           81_938_809
    Depth         36_001_140
    Breadth                2
  Annihilate      46_500_505
  Commute            130_931
  Copy             7_671_051
  Erase            9_257_834
  Expand           6_530_386
  Call             7_546_392
  Branch           4_301_710

Memory
  Heap               569_552 B
  Allocated    1_824_515_040 B
  Freed        1_824_515_040 B

[Performance...]
